# green-thumb-web

./: .env  .gitignore  .travis.yml  Cargo.toml  Makefile.toml  Procfile  README.md  Rocket.toml  app.json  build_all.sh  codecov.yml  package.json  run_local.sh
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  clippy.yml  coverage.yml  docs.yml  fmt.yml  rust.yml
client/: .gitignore  package.json  rollup.config.js
client/static/: index.html
master/: aliases.js  search-index.js  settings.html  source-files.js
master/green_thumb/: all.html  fn.main.html  fn.rockets.html  index.html  macro.rocket_uri_macro_favicon.html  macro.rocket_uri_macro_index.html  macro.rocket_uri_macro_static_file.html  rocket_uri_macro_favicon.m.html  rocket_uri_macro_static_file.m.html  rockets.v.html  sidebar-items.js
master/green_thumb/data/: DataMgr.t.html  index.html  sidebar-items.js  struct.DataMgr.html
master/green_thumb/logging/: fn.logging_init.html  index.html  logging_init.v.html  sidebar-items.js
master/green_thumb/models/: NewPlant.t.html  Plant.t.html  PlantType.t.html  enum.PlantType.html  fn._impl_insertable_for_newplant.html  fn._impl_queryable_for_crop.html  (+7 more)
migrations/2018-11-24-215313_plants/: up.sql
migrations/2018-11-25-182929_crops/: down.sql  up.sql
migrations/2018-11-25-182933_tasks/: up.sql
migrations/2018-11-30-191352_plants/: down.sql  up.sql
scss/: green_thumb.scss
server/: .gitignore  Cargo.toml
server/src/: main.rs  routes.rs
src/: crop.rs  data.rs  lib.rs  logging.rs  main.rs  models.rs  plant.rs  routes.rs  schema.rs
src/data/: crop.rs  mod.rs  plant.rs
static/: index.html
templates/: create_plant.hbs  footer.hbs  index.hbs  layout.hbs
(+3446 files in other folders)
