[package]
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
edition = "2018"
name = "green-thumb"
version = "0.1.0"

[dependencies]
chrono = "0.4.10"
log = "0.4.8"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0.104"
serde_derive = "1.0.104"
simplelog = "0.7.4"
strum = "0.17.1"
strum_macros = "0.17.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates"]
