[package]
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
edition = "2018"
name = "green-thumb"
version = "0.1.0"

[dependencies]
chrono = "0.4.11"
log = "0.4.8"
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = "1.0.106"
serde_derive = "1.0.106"
simplelog = "0.7.5"
strum = "0.18.0"
strum_macros = "0.18.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel-derive-enum = { version = "1.0", features = ["postgres"] }
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates"]
